--- a/Multimedia-Practica3/location.html
+++ b/Multimedia-Practica3/location.html
@@ -8,9 +8,11 @@
     <meta name="description" content="La ciudad de Gotham es única en el mundo, llena de servicios y oportunidades para
     pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Gotham, vacaciones, ciudad, batman, Batman, Joker, joker,
+     verano, batmovil, conduccion, aventura, murciélago, Guasón, villano, diversión, superhéroes, superheroe"/>
+    <meta name="location" content="index, follow"/>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
