--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -42,10 +42,10 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="focus-button" href="index.html">Inicio</a></li>
-                                        <li><a class="focus-button"href="service.html">Servicios</a></li>
-                                        <li><a class="focus-button"href="location.html">Localización</a></li>
-                                        <li><a class="focus-button"href="about.html">Acerca de nosotros</a></li>
+                                        <li><a href="index.html">Inicio</a></li>
+                                        <li><a href="service.html">Servicios</a></li>
+                                        <li><a href="location.html">Localización</a></li>
+                                        <li><a href="about.html">Acerca de nosotros</a></li>
                                     </ul>
                                 </nav>
                             </div>
